include/El/matrices.h

/* Forsythe
   ======== */
EL_EXPORT ElError ElForsythe_i
( ElMatrix_i J, ElInt n, ElInt alpha, ElInt lambda );
EL_EXPORT ElError ElForsythe_s
( ElMatrix_s J, ElInt n, float alpha, float lambda );
EL_EXPORT ElError ElForsythe_d
( ElMatrix_d J, ElInt n, double alpha, double lambda );
EL_EXPORT ElError ElForsythe_c
( ElMatrix_c J, ElInt n, complex_float alpha, complex_float lambda );
EL_EXPORT ElError ElForsythe_z
( ElMatrix_z J, ElInt n, complex_double alpha, complex_double lambda );
EL_EXPORT ElError ElForsytheDist_i
( ElDistMatrix_i J, ElInt n, ElInt alpha, ElInt lambda );
EL_EXPORT ElError ElForsytheDist_s
( ElDistMatrix_s J, ElInt n, float alpha, float lambda );
EL_EXPORT ElError ElForsytheDist_d
( ElDistMatrix_d J, ElInt n, double alpha, double lambda );
EL_EXPORT ElError ElForsytheDist_c
( ElDistMatrix_c J, ElInt n, complex_float alpha, complex_float lambda );
EL_EXPORT ElError ElForsytheDist_z
( ElDistMatrix_z J, ElInt n, complex_double alpha, complex_double lambda );
/* Fox-Li
   ====== */
EL_EXPORT ElError ElFoxLi_c( ElMatrix_c A, ElInt n, float omega );
EL_EXPORT ElError ElFoxLi_z( ElMatrix_z A, ElInt n, double omega );
EL_EXPORT ElError ElFoxLiDist_c( ElDistMatrix_c A, ElInt n, float omega );
EL_EXPORT ElError ElFoxLiDist_z( ElDistMatrix_z A, ElInt n, double omega );
/* Fourier
   ======= */
EL_EXPORT ElError ElFourier_c( ElMatrix_c A, ElInt n );
EL_EXPORT ElError ElFourier_z( ElMatrix_z A, ElInt n );
EL_EXPORT ElError ElFourierDist_c( ElDistMatrix_c A, ElInt n );
EL_EXPORT ElError ElFourierDist_z( ElDistMatrix_z A, ElInt n );
/* Gaussian
   ======== */
EL_EXPORT ElError ElGaussian_s
( ElMatrix_s A, ElInt m, ElInt n, float mean, float stddev );
EL_EXPORT ElError ElGaussian_d
( ElMatrix_d A, ElInt m, ElInt n, double mean, double stddev );
EL_EXPORT ElError ElGaussian_c
( ElMatrix_c A, ElInt m, ElInt n, complex_float mean, float stddev );
EL_EXPORT ElError ElGaussian_z
( ElMatrix_z A, ElInt m, ElInt n, complex_double mean, double stddev );
EL_EXPORT ElError ElGaussianDist_s
( ElDistMatrix_s A, ElInt m, ElInt n, float mean, float stddev );
EL_EXPORT ElError ElGaussianDist_d
( ElDistMatrix_d A, ElInt m, ElInt n, double mean, double stddev );
EL_EXPORT ElError ElGaussianDist_c
( ElDistMatrix_c A, ElInt m, ElInt n, complex_float mean, float stddev );
EL_EXPORT ElError ElGaussianDist_z
( ElDistMatrix_z A, ElInt m, ElInt n, complex_double mean, double stddev );