include/El/matrices.py


# Forsythe
# --------
lib.ElForsythe_i.argtypes = [c_void_p,iType,iType,iType]
lib.ElForsythe_i.restype = c_uint
lib.ElForsythe_s.argtypes = [c_void_p,iType,sType,sType]
lib.ElForsythe_s.restype = c_uint
lib.ElForsythe_d.argtypes = [c_void_p,iType,dType,dType]
lib.ElForsythe_d.restype = c_uint
lib.ElForsythe_c.argtypes = [c_void_p,iType,cType,cType]
lib.ElForsythe_c.restype = c_uint
lib.ElForsythe_z.argtypes = [c_void_p,iType,zType,zType]
lib.ElForsythe_z.restype = c_uint
lib.ElForsytheDist_i.argtypes = [c_void_p,iType,iType,iType]
lib.ElForsytheDist_i.restype = c_uint
lib.ElForsytheDist_s.argtypes = [c_void_p,iType,sType,sType]
lib.ElForsytheDist_s.restype = c_uint
lib.ElForsytheDist_d.argtypes = [c_void_p,iType,dType,dType]
lib.ElForsytheDist_d.restype = c_uint
lib.ElForsytheDist_c.argtypes = [c_void_p,iType,cType,cType]
lib.ElForsytheDist_c.restype = c_uint
lib.ElForsytheDist_z.argtypes = [c_void_p,iType,zType,zType]
lib.ElForsytheDist_z.restype = c_uint
def Forsythe(J,n,alpha,lamb):
  if type(J) is Matrix:
    if   J.tag == iTag: lib.ElForsythe_i(A.obj,n,alpha,lamb)
    elif J.tag == sTag: lib.ElForsythe_s(A.obj,n,alpha,lamb)
    elif J.tag == dTag: lib.ElForsythe_d(A.obj,n,alpha,lamb)
    elif J.tag == cTag: lib.ElForsythe_c(A.obj,n,alpha,lamb)
    elif J.tag == zTag: lib.ElForsythe_z(A.obj,n,alpha,lamb)
    else: raise Exception('Unsupported datatype')
  elif type(J) is DistMatrix:
    if   J.tag == iTag: lib.ElForsytheDist_i(A.obj,n,alpha,lamb)
    elif J.tag == sTag: lib.ElForsytheDist_s(A.obj,n,alpha,lamb)
    elif J.tag == dTag: lib.ElForsytheDist_d(A.obj,n,alpha,lamb)
    elif J.tag == cTag: lib.ElForsytheDist_c(A.obj,n,alpha,lamb)
    elif J.tag == zTag: lib.ElForsytheDist_z(A.obj,n,alpha,lamb)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Fox-Li
# ------
lib.ElFoxLi_c.argtypes = [c_void_p,iType,sType]
lib.ElFoxLi_c.restype = c_uint
lib.ElFoxLi_z.argtypes = [c_void_p,iType,dType]
lib.ElFoxLi_z.restype = c_uint
lib.ElFoxLiDist_c.argtypes = [c_void_p,iType,sType]
lib.ElFoxLiDist_c.restype = c_uint
lib.ElFoxLiDist_z.argtypes = [c_void_p,iType,dType]
lib.ElFoxLiDist_z.restype = c_uint
def FoxLi(A,n,omega):
  if type(A) is Matrix:
    if   A.tag == cTag: lib.ElFoxLi_c(A.obj,n,omega)
    elif A.tag == zTag: lib.ElFoxLi_z(A.obj,n,omega)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == cTag: lib.ElFoxLiDist_c(A.obj,n,omega)
    elif A.tag == zTag: lib.ElFoxLiDist_z(A.obj,n,omega)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Fourier
# -------
lib.ElFourier_c.argtypes = [c_void_p,iType]
lib.ElFourier_c.restype = c_uint
lib.ElFourier_z.argtypes = [c_void_p,iType]
lib.ElFourier_z.restype = c_uint
lib.ElFourierDist_c.argtypes = [c_void_p,iType]
lib.ElFourierDist_c.restype = c_uint
lib.ElFourierDist_z.argtypes = [c_void_p,iType]
lib.ElFourierDist_z.restype = c_uint
def Fourier(A,n):
  if type(A) is Matrix:
    if   A.tag == cTag: lib.ElFourier_c(A.obj,n)
    elif A.tag == zTag: lib.ElFourier_z(A.obj,n)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == cTag: lib.ElFourierDist_c(A.obj,n)
    elif A.tag == zTag: lib.ElFourierDist_z(A.obj,n)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# GCD matrix
# ----------
# TODO

# Gear matrix
# -----------
# TODO

# GEPP Growth
# -----------
# TODO

# Random
# ======

# Gaussian
# --------
lib.ElGaussian_s.argtypes = [c_void_p,iType,iType,sType,sType]
lib.ElGaussian_s.restype = c_uint
lib.ElGaussian_d.argtypes = [c_void_p,iType,iType,dType,dType]
lib.ElGaussian_d.restype = c_uint
lib.ElGaussian_c.argtypes = [c_void_p,iType,iType,cType,sType]
lib.ElGaussian_c.restype = c_uint
lib.ElGaussian_z.argtypes = [c_void_p,iType,iType,zType,dType]
lib.ElGaussian_z.restype = c_uint
lib.ElGaussianDist_s.argtypes = [c_void_p,iType,iType,sType,sType]
lib.ElGaussianDist_s.restype = c_uint
lib.ElGaussianDist_d.argtypes = [c_void_p,iType,iType,dType,dType]
lib.ElGaussianDist_d.restype = c_uint
lib.ElGaussianDist_c.argtypes = [c_void_p,iType,iType,cType,sType]
lib.ElGaussianDist_c.restype = c_uint
lib.ElGaussianDist_z.argtypes = [c_void_p,iType,iType,zType,dType]
lib.ElGaussian_z.restype = c_uint
def Gaussian(A,m,n,mean,stddev):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElGaussian_s(A.obj,m,n,mean,stddev)
    elif A.tag == dTag: lib.ElGaussian_d(A.obj,m,n,mean,stddev)
    elif A.tag == cTag: lib.ElGaussian_c(A.obj,m,n,mean,stddev)
    elif A.tag == zTag: lib.ElGaussian_z(A.obj,m,n,mean,stddev)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElGaussianDist_s(A.obj,m,n,mean,stddev)
    elif A.tag == dTag: lib.ElGaussianDist_d(A.obj,m,n,mean,stddev)
    elif A.tag == cTag: lib.ElGaussianDist_c(A.obj,m,n,mean,stddev)
    elif A.tag == zTag: lib.ElGaussianDist_z(A.obj,m,n,mean,stddev)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')
